<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_statistic"
        android:title="@string/statistics"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/button_my_friends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_shop"
        android:icon="@drawable/ic_shop"
        android:title="Shop"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/button_logout"
        app:showAsAction="ifRoom"
        />
</menu>