<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_leave_alliance"
        android:title="@string/leave_alliance"
        android:icon="@drawable/ic_leave"
        android:actionLayout="@layout/menu_item_layout"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/action_disband_alliance"
        android:title="@string/disband_alliance"
        android:icon="@drawable/ic_disband"
        android:actionLayout="@layout/menu_item_layout"

        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/action_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"
        android:actionLayout="@layout/menu_item_layout"
        app:showAsAction="ifRoom"
        android:visible="false" />
</menu>